OPページ作成

--- a/company.html
+++ b/company.html
@@ -8,7 +8,7 @@
  </head>
  <body>
    <header class="header">
-      <a href="にわちJAPAN.html">
+      <a href="top.html">
       <img class="logo" src="IMAGES/にわちJAPAN.jpg" alt="にわちJAPAN" width="100px" height="100px">
       </a>
       <nav>
@@ -45,7 +45,7 @@
       </tr>
       <tr>
          <td>設立</td>
-         <td>2022年7月くらい</td>
+         <td>2022年5月10日</td>
       </tr>
       <tr>
          <td>取引銀行</td>
@@ -56,6 +56,7 @@
          <td>
             <ul>
                <li>ちゃんぺこ軍団</li>
+               <li>マシカクンch</li>
                <li>魔物の洞窟</li>
                <li>アドレナ沼分隊</li>
                <li>ゲーム・キング・ジョイ</li>
