--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
  </head>
  <body>
   <header class="header">
-    <a href="にわちJAPAN.html">
+    <a href="top.html">
     <img class="logo" src="IMAGES/にわちJAPAN.jpg" alt="にわちJAPAN" width="100px" height="100px">
     </a>
     <nav>
