--- a/niwati.html
+++ b/niwati.html
@@ -8,7 +8,7 @@
  </head>
  <body>
   <header class="header">
-    <a href="にわちJAPAN.html">
+    <a href="top.html">
     <img class="logo" src="IMAGES/にわちJAPAN.jpg" alt="にわちJAPAN" width="100px" height="100px">
     </a>
     <nav>
@@ -37,7 +37,7 @@
      <img src="IMAGES/niwaod.png" width="400px" height="400px" style="background-image: url(IMAGES/bg_pilot1.png);">
      </div>
      <div class="niwa-table">
-     <table border="1" style="font-size: 30px; width: 300px;">
+     <table class="niwa-table2" border="1" style="font-size: 30px; width: 300px;">
       <tr>
         <td>背番号</td>
         <td>10</td>
