--- a/member.html
+++ b/member.html
@@ -8,7 +8,7 @@
  </head>
  <body>
     <header class="header">
-        <a href="にわちJAPAN.html">
+        <a href="top.html">
         <img class="logo" src="IMAGES/にわちJAPAN.jpg" alt="にわちJAPAN" width="100px" height="100px">
         </a>
         <nav>
@@ -52,8 +52,10 @@
     <p>アフリカのガキ</p>
   </div>
   <div style="text-align: center; margin-bottom: 20px;">
-    <img src="IMAGES/tvzero.png" alt="ネイケー" width="750px" height="375px">
-    <p>ネイケー</p>
+    <a href="cheese.html">
+    <img src="IMAGES/tvzero.png" alt="チーズ星人" width="750px" height="375px">
+    <p>チーズ星人</p>
+    </a>
   </div>
   <div style="text-align: center; margin-bottom: 20px;">
     <img src="IMAGES/ribo.png" alt="きなお" width="750px" height="375px">
